crates/zeek-websocket-derive/tests/unit-struct-fail.stderr
error: only structs with named fields can derive ZeekType
 --> tests/unit-struct-fail.rs:4:1
  |
4 | struct A;
  | ^^^^^^
