crates/zeek-websocket-derive/tests/unit-struct-fail.rs
use zeek_websocket_derive::ZeekType;

#[derive(ZeekType)]
struct A;

fn main() {}
